--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           tf_actions_version: ${{ env.TF_ACTIONS_VERSION }}
           tf_actions_subcommand: fmt
-          tf_actions_working_dir: .
+          tf_actions_working_dir: test
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -26,7 +26,7 @@ jobs:
         with:
           tf_actions_version: ${{ env.TF_ACTIONS_VERSION }}
           tf_actions_subcommand: init
-          tf_actions_working_dir: .
+          tf_actions_working_dir: test
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -35,7 +35,7 @@ jobs:
         with:
           tf_actions_version: ${{ env.TF_ACTIONS_VERSION }}
           tf_actions_subcommand: validate
-          tf_actions_working_dir: .
+          tf_actions_working_dir: test
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -44,7 +44,7 @@ jobs:
         with:
           tf_actions_version: ${{ env.TF_ACTIONS_VERSION }}
           tf_actions_subcommand: plan
-          tf_actions_working_dir: .
+          tf_actions_working_dir: test
           tf_actions_comment: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
