--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,10 @@ name: Terraform
 env:
   TF_ACTIONS_VERSION: 0.12.15
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
 jobs:
   terraform:
     name: Terraform
